--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -9,10 +9,8 @@
         <None Include="paket.references" />
         <None Include="style.scss" />
         <Compile Include="Version.fs" />
+        <Compile Include="../Shared/Shared.fs" />
         <Compile Include="Client.fs" />
-    </ItemGroup>
-    <ItemGroup>
-      <ProjectReference Include="..\Shared\Shared.fsproj" />
     </ItemGroup>
     <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
